Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2608

TNonblockingServer.cpp warnings on clang 3.4

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.2
    • C++ - Library
    • None
    • Patch Available

    Description

      thrift/lib/cpp/src/thrift/server/TNonblockingServer.cpp:164:7: warning: private field 'taskHandle_' is not used [-Wunused-private-field]
        int taskHandle_;
            ^
      thrift/lib/cpp/src/thrift/server/TNonblockingServer.cpp:167:16: warning: private field 'taskEvent_' is not used [-Wunused-private-field]
        struct event taskEvent_;
                     ^
      

      Attachments

        1. THRIFT-2608.patch
          0.6 kB
          Konrad Grochowski

        Activity

          People

            roger Roger Meier
            hcorg Konrad Grochowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: