THRIFT-2608 TNonblockingServer.cpp warnings on clang 3.4

Patch: Konrad Grochowski